--- a/src/SampleAppForMongoDBQueryHelper/packages.config
+++ b/src/SampleAppForMongoDBQueryHelper/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="mongocsharpdriver" version="1.8.3" targetFramework="net40" />
   <package id="MongoDB.Kennedy.Concurrency" version="1.0.10" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net40" />
 </packages>
